--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
         </div>
         <div class='buttons'>
             <div>
-                <button type="button" id="select-button">Informative Topics</button>
-                <button type="button" id="select-button">Opinion Topics</button>
-                <button type="button" id="select-button">Narrative Topics</button>
+                <button type="button" id="informative-button">Informative Topics</button>
+                <button type="button" id="opinion-button">Opinion Topics</button>
+                <button type="button" id="narrative-button">Narrative Topics</button>
             </div>
         </div>
         <div id='show-topic'>
-            <h2>Your topic is:</h2>
             <div class='display-space' id='chosen-topic'></div>
         </div>
 
