--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/index.css">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js">
         </script>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-        <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script> -->
 
         <title>Writing Prompt Randomizer</title>
     </head>
 
     <body>
-        <nav>
+        <nav class='navbar'>
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -30,55 +27,106 @@
         <div>
             <h1>Writing Prompt Randomizer</h1>
         </div>
-        <div>
-            <!-- Modal Trigger -->
-            <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
 
-            <!-- Modal Structure -->
-            <div id="modal1" class="modal">
-                <div class="modal-content">
-                    <h4>Your prompt:</h4>
-                    <div id='show-topic'>
-                        <div class='display-space' id='informative-topic'></div>
+        <div class="row">
+            <div class="col s4">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="assets/images/info writing image.jpeg">
+                        <span class="card-title">Informative Writing</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <div>
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="button" href="#modal1">Informative
+                                Topics</a>
+
+                            <!-- Modal Structure -->
+                            <div id="modal1" class="modal">
+                                <div class="modal-content">
+                                    <h4>Your prompt:</h4>
+                                    <div id='show-topic'>
+                                        <div class='display-space' id='informative-topic'></div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-                </div>
             </div>
-        </div>
-        <div>
-            <!-- Modal Trigger -->
-            <a class="waves-effect waves-light btn modal-trigger" href="#modal2">Modal</a>
+            <div class="col s4">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="assets/images/opinion writing.jpeg">
+                        <span class="card-title">Opinion Writing</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <div>
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="button" href="#modal2">Opinion
+                                Topics</a>
 
-            <!-- Modal Structure -->
-            <div id="modal2" class="modal">
-                <div class="modal-content">
-                    <h4>Your prompt:</h4>
-                    <div id='opinion-topic-space'>
-                        <div class='display-space' id='opinion-topic'></div>
+                            <!-- Modal Structure -->
+                            <div id="modal2" class="modal">
+                                <div class="modal-content">
+                                    <h4>Your prompt:</h4>
+                                    <div id='opinion-topic-space'>
+                                        <div class='display-space' id='opinion-topic'></div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+            <div class="col s4">
+                <div class="card small" id="card-background">
+                    <div class="card-image">
+                        <img src="assets/images/books image.jpeg">
+                        <span class="card-title" id="card-titles">Narrative Writing</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information.
+                            I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <div>
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="button" href="#modal3">Narative
+                                Topics</a>
+                            <!-- Modal Structure -->
+                            <div id="modal3" class="modal">
+                                <div class="modal-content">
+                                    <h4>Your prompt:</h4>
+                                    <div id='narrative-topic-space'>
+                                        <div class='display-space' id='narrative-topic'></div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-
-
-
-
-
-
-
-        <script src="index.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script> -->
-
-
+            <script src="assets/javascript/index.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 
 </html>
