--- a/index.html
+++ b/index.html
@@ -18,12 +18,28 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">JavaScript</a></li>
+                    <li id="info-writing-section"><a href="sass.html">Informative Writing Help</a></li>
+                    <li id="opinion-writing-section"><a href="badges.html">Opinion Writing Help</a></li>
+                    <li id="narrative-writing-section"><a href="collapsible.html">Narrative Writing Help</a></li>
                 </ul>
             </div>
         </nav>
+        <div class="parallax-container">
+            <div class="parallax" id="thinker"><img src="assets/images/info writing image.jpeg">
+                <h1></h1>
+            </div>
+        </div>
+        <div class="section white">
+            <div class="row container">
+                <h2 class="header">Parallax</h2>
+                <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image
+                    in this
+                    case, is moved at a different speed than the foreground content while scrolling.</p>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax" id="books"><img src="assets/images/books image.jpeg"></div>
+        </div>
         <div>
             <h1>Writing Prompt Randomizer</h1>
         </div>
