--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
             </div>
         </nav>
         <div class="parallax-container">
-            <div class="parallax" id="thinker"><img src="assets/images/info writing image.jpeg">
+            <div class="parallax" id="books-lighting"><img src="assets/images/books with lighting wallpaper.jpeg">
                 <h1></h1>
             </div>
         </div>
         <div class="section white">
-            <div class="row container">
-                <h2 class="header">Parallax</h2>
-                <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image
-                    in this
-                    case, is moved at a different speed than the foreground content while scrolling.</p>
+            <div class="row container" id='parallax-white-section'>
+                <h2 class="header" id="cs-lewis-quote">"You can make anything by writing."</h2>
+                <p class="grey-text text-darken-3 lighten-3" id='lewis-attribute'>-C.S. Lewis</p>
+
             </div>
         </div>
         <div class="parallax-container">
-            <div class="parallax" id="books"><img src="assets/images/books image.jpeg"></div>
+            <div class="parallax" id="writing"><img src="assets/images/ballpen-blank-desk-journal-606541.jpg"></div>
         </div>
         <div>
             <h1>Writing Prompt Randomizer</h1>
@@ -51,9 +50,8 @@
                         <img src="assets/images/info writing image.jpeg">
                         <span class="card-title">Informative Writing</span>
                     </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                            I am convenient because I require little markup to use effectively.</p>
+                    <div class="card-content" id="card-info">
+                        <p>Click the button below to generate an informative writing prompt.</p>
                     </div>
                     <div class="card-action">
                         <div>
@@ -84,8 +82,7 @@
                         <span class="card-title">Opinion Writing</span>
                     </div>
                     <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                            I am convenient because I require little markup to use effectively.</p>
+                        <p>Click the button below to generate an opinion writing prompt.</p>
                     </div>
                     <div class="card-action">
                         <div>
@@ -116,8 +113,7 @@
                         <span class="card-title" id="card-titles">Narrative Writing</span>
                     </div>
                     <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                            I am convenient because I require little markup to use effectively.</p>
+                        <p>Click the button below to generate a narrative writing prompt.</p>
                     </div>
                     <div class="card-action">
                         <div>
