--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
         </div>
         <div class="section white">
             <div class="row container" id='parallax-white-section'>
-                <h2 class="header" id="cs-lewis-quote">"You can make anything by writing."</h2>
-                <p class="grey-text text-darken-3 lighten-3" id='lewis-attribute'>-C.S. Lewis</p>
+                <h2 class="header" id="parallax-title">Learn the right way to write</h2>
+
 
             </div>
         </div>
         <div class="parallax-container">
             <div class="parallax" id="writing"><img src="assets/images/ballpen-blank-desk-journal-606541.jpg"></div>
+            <p id='lewis-attribute'>"You can make anything by writing."-C.S. Lewis</p>
         </div>
         <div>
-            <h1>Writing Prompt Randomizer</h1>
+            <h1 id="choice-title">Writing Prompts</h1>
         </div>
 
         <div class="row">
@@ -51,7 +52,7 @@
                         <span class="card-title">Informative Writing</span>
                     </div>
                     <div class="card-content" id="card-info">
-                        <p>Click the button below to generate an informative writing prompt.</p>
+                        <p>Click the button below to generate a prompt.</p>
                     </div>
                     <div class="card-action">
                         <div>
@@ -82,7 +83,7 @@
                         <span class="card-title">Opinion Writing</span>
                     </div>
                     <div class="card-content">
-                        <p>Click the button below to generate an opinion writing prompt.</p>
+                        <p>Click the button below to generate a prompt.</p>
                     </div>
                     <div class="card-action">
                         <div>
@@ -113,7 +114,7 @@
                         <span class="card-title" id="card-titles">Narrative Writing</span>
                     </div>
                     <div class="card-content">
-                        <p>Click the button below to generate a narrative writing prompt.</p>
+                        <p>Click the button below to generate a prompt.</p>
                     </div>
                     <div class="card-action">
                         <div>
