z-index-navbar-and-footer

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <div class="parallax" id="writing"><img src="assets/images/ballpen-blank-desk-journal-606541.jpg"></div>
             <p id='lewis-attribute'>"You can make anything by writing."-C.S. Lewis</p>
         </div>
-        <div>
-            <h1 id="choice-title">Writing Prompts</h1>
-        </div>
 
-        <div class="row">
+        <div class="row" id='card-area'>
+            <div>
+                <h1 id="choice-title">Writing Prompts</h1>
+            </div>
             <div class="col s4">
                 <div class="card small">
                     <div class="card-image">
@@ -137,9 +137,39 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <footer class="page-footer" id='footer-row'>
+                <div class="container">
+                    <div class="row">
+                        <div class="col l6 s12">
+                            <h5 class="white-text">Writing Prompt</h5>
+                            <p class="grey-text text-lighten-4">Michael Olsen
+                            </p>
+                        </div>
+                        <div class="col l4 offset-l2 s12">
+                            <h5 class="white-text">Links</h5>
+                            <ul>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright" id="footer-bottom">
+                    <div class="container">
+                        © 2020 Copyright Text
+                        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                    </div>
+                </div>
+            </footer>
+        </div>
 
-            <script src="assets/javascript/index.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+        <script src="assets/javascript/index.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 
 </html>
