--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </script>
         <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <title>Writing Prompt Randomizer</title>
     </head>
 
@@ -32,13 +32,20 @@
         <div class="section white">
             <div class="row container" id='parallax-white-section'>
                 <h2 class="header" id="parallax-title">Learn the right way to write</h2>
-
-
+                <i class="fas fa-chevron-circle-down" id='scroll-down'></i>
             </div>
         </div>
         <div class="parallax-container">
             <div class="parallax" id="writing"><img src="assets/images/ballpen-blank-desk-journal-606541.jpg"></div>
             <p id='lewis-attribute'>"You can make anything by writing."-C.S. Lewis</p>
+        </div>
+
+        <div class="row">
+            <div class="col s12">This div is 12-columns wide on all screen sizes</div>
+            <div class="col s3">6-columns (one-half)</div>
+            <div class="col s3">6-columns (one-half)</div>
+            <div class="col s3">6-columns (one-half)</div>
+            <div class="col s3">6-columns (one-half)</div>
         </div>
 
         <div class="row" id='card-area'>
