--- a/index.html
+++ b/index.html
@@ -40,12 +40,36 @@
             <p id='lewis-attribute'>"You can make anything by writing."-C.S. Lewis</p>
         </div>
 
-        <div class="row">
-            <div class="col s12">This div is 12-columns wide on all screen sizes</div>
-            <div class="col s3">6-columns (one-half)</div>
-            <div class="col s3">6-columns (one-half)</div>
-            <div class="col s3">6-columns (one-half)</div>
-            <div class="col s3">6-columns (one-half)</div>
+        <div class="row" id="icon-section">
+            <!-- <div class="col s12"></div> -->
+            <div class="col s3" id="icons-row">
+                <i class="fas fa-user-edit"></i>
+                <div id="editing-column">Student Editing</div>
+                <div>
+                    <p class="column-descriptions">Give students the opportunity to edit other students examples.</p>
+                </div>
+            </div>
+            <div class="col s3" id="icons-row">
+                <i class="fas fa-book-reader"></i>
+                <div id="editing-column">Examples</div>
+                <div>
+                    <p class="column-descriptions">See other student examples of informative, opinion, and narrative
+                        writing.</p>
+                </div>
+            </div>
+            <div class="col s3" id="icons-row">
+                <i class="fas fa-spell-check"></i>
+                <div id="editing-column">Grammar</div>
+                <div>
+                    <p class="column-descriptions">Review and use correct grammar in your writing.</p>
+                </div>
+            </div>
+            <div class="col s3" id="icons-row"><i class="fas fa-scroll"></i>
+                <div id="editing-column">Progressive Story</div>
+                <div>
+                    <p class="column-descriptions">Contribute to the progressive story with your class.</p>
+                </div>
+            </div>
         </div>
 
         <div class="row" id='card-area'>
