--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li id="info-writing-section"><a href="sass.html">Informative Writing Help</a></li>
-                    <li id="opinion-writing-section"><a href="badges.html">Opinion Writing Help</a></li>
-                    <li id="narrative-writing-section"><a href="collapsible.html">Narrative Writing Help</a></li>
+                    <li id="info-writing-section"><a href="informativeWriting.html">Informative Writing</a></li>
+                    <li id="opinion-writing-section"><a href="opinionPage.html">Opinion Writing</a></li>
+                    <li id="narrative-writing-section"><a href="narrativePage.html">Narrative Writing</a></li>
                 </ul>
             </div>
         </nav>
