--- a/opinionPage.html
+++ b/opinionPage.html
@@ -18,12 +18,28 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li id="info-writing-section"><a href="sass.html">Informative Writing</a></li>
-                    <li id="opinion-writing-section"><a href="badges.html">Opinion Writing</a></li>
-                    <li id="narrative-writing-section"><a href="collapsible.html">Narrative Writing</a></li>
+                    <li id="info-writing-section"><a href="informativeWriting.html">Informative Writing</a></li>
+                    <li id="opinion-writing-section"><a href="opinionPage.html">Opinion Writing</a></li>
+                    <li id="narrative-writing-section"><a href=narrativePage.html">Narrative Writing</a></li>
                 </ul>
             </div>
         </nav>
+        <div class="parallax-container">
+            <div class="parallax" id="books-lighting"><img src="assets/images/books with lighting wallpaper.jpeg">
+                <h1></h1>
+            </div>
+        </div>
+        <div class="section white">
+            <div class="row container" id='parallax-white-section'>
+                <h2 class="header" id="parallax-title-informative">Opinion Writing</h2>
+                <i class="fas fa-chevron-circle-down" id='scroll-down'></i>
+            </div>
+        </div>
+        <div class="parallax-container">
+            <div class="parallax" id="writing"><img src="assets/images/ballpen-blank-desk-journal-606541.jpg"></div>
+            <p id="slicer-attribute">"The difference between opinions and convictions is this,
+                men hold opinions, covictions hold men."-T.R. Slicer</p>
+        </div>
         <script src="assets/javascript/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
