--- a/informativeWriting.html
+++ b/informativeWriting.html
@@ -48,6 +48,49 @@
                     different text structures when writing an informative essay: Description, Compare and
                     Contrast, Sequence, Problem and Solution, and Cause and Effect.
                 </p>
+
+                <button class="accordion">Description</button>
+                <div class="panel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                        ipsum unde alias laboriosam enim impedit porro itaque facere aspernatur libero fugit,
+                        nam sapiente, excepturi accusantium dolore esse ducimus qui pariatur?</p>
+                </div>
+                <button class="accordion">Compare and Contrast</button>
+                <div class="panel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                        ipsum unde alias laboriosam enim impedit porro itaque facere aspernatur libero fugit,
+                        nam sapiente, excepturi accusantium dolore esse ducimus qui pariatur?</p>
+                </div>
+                <button class="accordion">Sequence</button>
+                <div class="panel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                        ipsum unde alias laboriosam enim impedit porro itaque facere aspernatur libero fugit,
+                        nam sapiente, excepturi accusantium dolore esse ducimus qui pariatur?</p>
+                </div>
+                <button class="accordion">Cause and Effect</button>
+                <div class="panel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                        ipsum unde alias laboriosam enim impedit porro itaque facere aspernatur libero fugit,
+                        nam sapiente, excepturi accusantium dolore esse ducimus qui pariatur?</p>
+                </div>
+                <button class="accordion">Problem and Solution</button>
+                <div class="panel">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                        ipsum unde alias laboriosam enim impedit porro itaque facere aspernatur libero fugit,
+                        nam sapiente, excepturi accusantium dolore esse ducimus qui pariatur?</p>
+                </div>
+
+
+
+                <!-- <h2 class="text-structure-list">
+                    <ul class="list-categories">
+                        <li>Description</li>
+                        <li>Compare and Contrast</li>
+                        <li>Sequence</li>
+                        <li>Cause and Effect</li>
+                        <li>Problem and Solution</li>
+                    </ul>
+                </h2> -->
             </div>
         </div>
         <script src="assets/javascript/index.js"></script>
