--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Writing Prompt Randomizer</title>
     </head>
 
@@ -18,7 +19,7 @@
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li id="info-writing-section"><a href="informativeWriting.html">Informative Writing</a></li>
+                    <li id="info-writing-section"><a href="informativePage.html">Informative Writing</a></li>
                     <li id="opinion-writing-section"><a href="opinionPage.html">Opinion Writing</a></li>
                     <li id="narrative-writing-section"><a href="narrativePage.html">Narrative Writing</a></li>
                 </ul>
