working-modal-buttons

--- a/informativePage.html
+++ b/informativePage.html
@@ -50,16 +50,46 @@
                 </p>
                 <h2 class="text-structure-list">
                     <ul class="list-categories">
-                        <li>Description</li>
-                        <!-- Modal Trigger -->
-                        <a class="waves-effect waves-light btn modal-trigger" id="description-button"
-                            href="#modal2">Learn more!</a>
+                        <li>Description
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="description-button"
+                                href="#modal2">Learn more!</a>
+                        </li>
 
                         <!-- Modal Structure -->
                         <div id="modal2" class="modal">
                             <div class="modal-content">
                                 <h4>Description Text Structure</h4>
-                                <p id=description-text-display>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <p class="text-structure-modal-display" id='description-text-display'>Lorem ipsum dolor
+                                    sit, amet consectetur adipisicing elit.
+                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
+                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
+                                    repudiandae.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
+                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
+                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
+                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
+                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                            </div>
+                        </div>
+
+                        <li>Compare and Contrast
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                                href="#modal3">Learn more!</a>
+                        </li>
+
+                        <!-- Modal Structure -->
+                        <div id="modal3" class="modal">
+                            <div class="modal-content">
+                                <h4>Compare and Contrast Text Structure</h4>
+                                <p class="text-structure-modal-display" id='compare-text-display'>Lorem ipsum dolor sit,
+                                    amet consectetur adipisicing elit.
                                     Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
                                     perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
                                     repudiandae.
@@ -77,13 +107,125 @@
                                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
                             </div>
                         </div>
-                        <li>Compare and Contrast</li>
-                        <li>Sequence</li>
-                        <li>Cause and Effect</li>
-                        <li>Problem and Solution</li>
+                        <li>Sequence
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                                href="#modal4">Learn more!</a>
+                        </li>
+
+                        <!-- Modal Structure -->
+                        <div id="modal4" class="modal">
+                            <div class="modal-content">
+                                <h4>Sequence Text Structure</h4>
+                                <p class="text-structure-modal-display" id='sequence-text-display'>Lorem ipsum dolor
+                                    sit,
+                                    amet consectetur adipisicing elit.
+                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
+                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
+                                    repudiandae.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
+                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
+                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
+                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
+                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+
+                                </p>
+
+                            </div>
+                            <div class="modal-footer">
+                                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                            </div>
+                        </div>
+                        <li>Cause and Effect
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                                href="#modal5">Learn more!</a>
+                        </li>
+
+                        <!-- Modal Structure -->
+                        <div id="modal5" class="modal">
+                            <div class="modal-content">
+                                <h4>Cause and Effect Text Structure</h4>
+                                <p class="text-structure-modal-display" id='cause-text-display'>Lorem ipsum dolor
+                                    sit,
+                                    amet consectetur adipisicing elit.
+                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
+                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
+                                    repudiandae.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
+                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
+                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
+                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
+                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+
+                                </p>
+
+                            </div>
+                            <div class="modal-footer">
+                                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                            </div>
+                        </div>
+                        <li>Problem and Solution
+                            <!-- Modal Trigger -->
+                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                                href="#modal6">Learn more!</a>
+                        </li>
+
+                        <!-- Modal Structure -->
+                        <div id="modal6" class="modal">
+                            <div class="modal-content">
+                                <h4>Problem and Solution Text Structure</h4>
+                                <p class="text-structure-modal-display" id='problem-text-display'>Lorem ipsum dolor
+                                    sit,
+                                    amet consectetur adipisicing elit.
+                                    Dolor dolore libero provident quae sint, inventore quisquam culpa facilis
+                                    perspiciatis qui autem. Veniam pariatur rerum ipsam nobis, beatae perferendis nam
+                                    repudiandae.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi placeat officia
+                                    unde. Odit accusantium explicabo error nulla molestias aliquid vel voluptates
+                                    voluptate, ad voluptas, officia eveniet! Eligendi alias quos possimus!
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat tempora atque
+                                    consequatur quo, sit voluptatibus magni amet distinctio expedita ut possimus
+                                    temporibus quidem ipsa molestias omnis cumque, quis facere reprehenderit.
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                            </div>
+                        </div>
                     </ul>
                 </h2>
             </div>
+        </div>
+        <div class="row">
+            <footer class="page-footer" id='footer-row'>
+                <div class="container">
+                    <div class="row">
+                        <div class="col l6 s12">
+                            <h5 class="white-text">Writing Prompt</h5>
+                            <p class="grey-text text-lighten-4">Michael Olsen
+                            </p>
+                        </div>
+                        <div class="col l4 offset-l2 s12">
+                            <h5 class="white-text">Links</h5>
+                            <ul>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright" id="footer-bottom">
+                    <div class="container">
+                        © 2020 Copyright Text
+                        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                    </div>
+                </div>
+            </footer>
         </div>
         <script src="assets/javascript/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
