id-modal-buttons-informative-page

--- a/informativePage.html
+++ b/informativePage.html
@@ -52,7 +52,7 @@
                     <ul class="list-categories">
                         <li>Description
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="description-button"
+                            <a class="waves-effect waves-light btn modal-trigger" id="learn-more-button"
                                 href="#modal2">Learn more!</a>
                         </li>
 
@@ -80,7 +80,7 @@
 
                         <li>Compare and Contrast
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                            <a class="waves-effect waves-light btn modal-trigger" id="learn-more-button"
                                 href="#modal3">Learn more!</a>
                         </li>
 
@@ -109,7 +109,7 @@
                         </div>
                         <li>Sequence
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                            <a class="waves-effect waves-light btn modal-trigger" id="learn-more-button"
                                 href="#modal4">Learn more!</a>
                         </li>
 
@@ -139,7 +139,7 @@
                         </div>
                         <li>Cause and Effect
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                            <a class="waves-effect waves-light btn modal-trigger" id="learn-more-button"
                                 href="#modal5">Learn more!</a>
                         </li>
 
@@ -169,7 +169,7 @@
                         </div>
                         <li>Problem and Solution
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="compare-button"
+                            <a class="waves-effect waves-light btn modal-trigger" id="learn-more-button"
                                 href="#modal6">Learn more!</a>
                         </li>
 
