--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         </nav>
         <div class="parallax-container">
             <div class="parallax" id="books-lighting"><img src="assets/images/books with lighting wallpaper.jpeg">
-                <h1></h1>
             </div>
         </div>
         <div class="section white">
@@ -41,8 +40,10 @@
             <p id='lewis-attribute'>"You can make anything by writing."-C.S. Lewis</p>
         </div>
 
+
+        <!--  Icons Section  -->
+
         <div class="row" id="icon-section">
-            <!-- <div class="col s12"></div> -->
             <div class="col s3" id="icons-row">
                 <i class="fas fa-user-edit"></i>
                 <div id="editing-column">Student Editing</div>
@@ -73,6 +74,8 @@
             </div>
         </div>
 
+        <!--Writing Prompt Cards-->
+
         <div class="row" id='card-area'>
             <div>
                 <h1 id="choice-title">Writing Prompts</h1>
@@ -89,7 +92,8 @@
                     <div class="card-action">
                         <div>
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="button" href="#modal1">Informative
+                            <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                                href="#modal1">Informative
                                 Topics</a>
 
                             <!-- Modal Structure -->
@@ -120,7 +124,8 @@
                     <div class="card-action">
                         <div>
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="button" href="#modal2">Opinion
+                            <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                                href="#modal2">Opinion
                                 Topics</a>
 
                             <!-- Modal Structure -->
@@ -151,7 +156,8 @@
                     <div class="card-action">
                         <div>
                             <!-- Modal Trigger -->
-                            <a class="waves-effect waves-light btn modal-trigger" id="button" href="#modal3">Narative
+                            <a class="waves-effect waves-light btn modal-trigger" id="topic-button"
+                                href="#modal3">Narative
                                 Topics</a>
                             <!-- Modal Structure -->
                             <div id="modal3" class="modal">
