--- a/informativePage.html
+++ b/informativePage.html
@@ -17,7 +17,7 @@
     <body>
         <nav class='navbar'>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Writing Prompt Randomizer</a>
+                <a href="index.html" class="brand-logo">Writing Prompt Randomizer</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li id="info-writing-section"><a href="informativePage.html">Informative Writing</a></li>
                     <li id="opinion-writing-section"><a href="opinionPage.html">Opinion Writing</a></li>
